Closes #158 -- Add next-playing song and song duration to nowplaying API [skip ci]
